# Il2CppRustTest

./: Cargo.toml  build.rs  copy.sh  unstripLog.sh
src/: lib.rs
