[package]
name = "rust_test"
version = "0.1.0"
authors = ["StackDoubleFlow <ojaslandge@gmail.com>"]
edition = "2018"

[package.metadata.ndk]
targets = ["arm64-v8a"]
platform = 24

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = "1.0"

[dependencies]
android_logger = "0.9.2"
log = "0.4.14"
dlopen = "0.1.8"
dlopen_derive = "0.1.4"
